prevent blocks-picker popup for last block to cause scrollbar blinking

--- a/src/styl/page/editor.styl
+++ b/src/styl/page/editor.styl
@@ -59,7 +59,8 @@ body
 #blocks-picker
   overflow-y: scroll
   position: fixed
-  padding: 81px 10px 10px
+  //- padding-bottom 50px to soothe the thumbnail for the last block overflow-scrolling glitch
+  padding: 81px 10px 50px
   width: 180px
   height: 100%
   left: auto
